<resources>
    <string name="app_name">TripPlanner</string>


    //A.Ehab
    <string name="google_maps_key">AIzaSyBU8SWOXzIQXn0I6SxP62Ogjru7_40Pmm4</string>
    <string name="google_directions_key">AIzaSyDmHpyqImH3LGGsXog9vw3HAI10lY6SPNI</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_start_trip">Trip Started </string>
    <string name="str_trip_desc">It\'s time for your trip.</string>
    <string name="str_start_question">Do you want to start?</string>
    <string name="str_yes">Yes</string>
    <string name="str_no">No</string>
    <string name="str_not_now">Not Now</string>


    //M.Hisham Section


    //Youmna Section
    <string name="bottomtabfirsticon">Start</string>
    <string name="bottomtabsecondicon">Edit</string>
    <string name="bottomtabthirdicon">Delete</string>
    <string name="bottomtabfourthicon">Done</string>
    ///////// 1st card strings
    <string name="tripName">Maldives</string>
    <string name="tripStatus">Upcoming</string>
    ////////// 2nd card strings
    <string name="tripDate">10/4/2017</string>
    <string name="tripTime">3:30</string>
    ///////// 3rd card strings
    <string name="startPoint">Nozha Street</string>
    <string name="endPoint">Abbas el 3a2ad</string>
    <string name="round_trip_str">Round Trip</string>

    /////// button date
    <string name="dateBtnName">00/00/0000</string>
    <string name="timeBtnName">00:00:00</string>
    <string name="addTrip">Add Trip</string>
</resources>
