<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/gray_200"
    android:layout_height="match_parent"
    tools:context="fallenleafapps.com.tripplanner.ui.activities.TripDetails">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            tools:ignore="ExtraText">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/tripimage"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

<android.support.v4.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp">

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"

                android:weightSum="3">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Trip Name:"
                        android:textSize="13sp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:id="@+id/tripname"
                        android:text="@string/tripName"
                        android:layout_weight="3"
                        android:textSize="15sp"
                        android:textColor="@color/black"
                         />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Trip Status:"
                        android:textSize="13sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/tripstatus"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/tripStatus"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:weightSum="3">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Trip Type:"
                        android:textSize="13sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/trip_type"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/round_trip_str"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"

                android:weightSum="2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Trip Date:"

                        android:textSize="13sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/tripdate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="@string/tripDate"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Trip Time:"
                        android:textSize="13sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/triptime"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="@string/tripTime"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="12dp"

                android:weightSum="2">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="Start Point:"
                        android:textSize="13sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/startlocation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="@string/startPoint"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    android:weightSum="3">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="End Point:"
                        android:textSize="13sp"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/endlocation"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="3"
                        android:text="@string/endPoint"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                </LinearLayout>

            </LinearLayout>


        </android.support.v7.widget.CardView>



            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:scrollbars="horizontal" />


    </LinearLayout>
</android.support.v4.widget.NestedScrollView>


    <com.aurelhubert.ahbottomnavigation.AHBottomNavigation
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />
</android.support.design.widget.CoordinatorLayout>
